apps/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: authentik
  annotations:
    external-dns.alpha.kubernetes.io/target: iserlohn.thisratis.gay
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
      sectionName: wildcard-https
  hostnames:
    - auth.thisratis.gay
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Forwarded-Proto
                value: https
              - name: Host
                value: auth.thisratis.gay
      backendRefs:
        - name: authentik-server
          port: 80
